<resources>
    <string name="app_name">ZXVBoxTVLive</string>

    <string name="load_progress_promate">正在解析频道，请稍后..</string>
    <string name="show_load_progress_promate">节目加载中...</string>
    <string name="show_load_error">节目暂时不能播放</string>
    <string name="channel_title">频道列表</string>
    <string name="show_playing_tilte">正在播放:</string>
    <string name="show_will_play_title">即将播放:</string>
    <string name="get_edg_info_title">正在获取节目信息</string>

    <string name="get_channel_faild">获取频道信息失败</string>

    <string name="get_channel_source_other">正在为您解析另一个节目源，请稍后..</string>
    <string name="get_edg_playing_show_title">正在播出</string>
    <string name="hava_no_show_info">暂无节目单,请稍后再试</string>

    <string name="show_time_name_title">节目名:</string>
    <string name="show_time_starttime_title">播出时间:</string>
    <string name="show_time_content_title">内容简介:</string>




</resources>
