<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:focusable="false"
    tools:context="zx.com.zxvboxtvlive.activity.MainActivity">

    <zx.com.zxvboxtvlive.ijkplayer.media.IjkVideoView
        android:id="@+id/videoview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:visibility="gone">
    </zx.com.zxvboxtvlive.ijkplayer.media.IjkVideoView>

    <LinearLayout
        android:id="@+id/load_progress_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:focusable="false">

        <ImageView
            android:id="@+id/load_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/load_progress"
            />

        <TextView
            android:id="@+id/load_progress_promate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/px50"
            android:text="@string/load_progress_promate"
            android:textColor="@color/zx_dcdcdc"
            android:textSize="24sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/load_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:focusable="false">

        <ImageView
            android:id="@+id/error_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/pagefailed_bg"
            />


        <TextView
            android:id="@+id/error_promate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/error_img"
            android:layout_marginTop="@dimen/px5"
            android:text="@string/get_channel_faild"
            android:textColor="#fff"
            android:textSize="18sp"
            />


    </LinearLayout>



    <LinearLayout
        android:id="@+id/channel_name_view"
        android:layout_width="@dimen/px460"
        android:layout_height="@dimen/px730"
        android:layout_marginLeft="@dimen/px300"
        android:layout_marginTop="@dimen/px200"
        android:background="@drawable/channel_bg"
        android:orientation="vertical"
        android:focusable="false"
        android:descendantFocusability="afterDescendants"
        android:visibility="visible"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_channel_title"
            android:gravity="center"
            android:text="@string/channel_title"
            android:textColor="@color/zx_dcdcdc"
            android:textSize="18sp"
            android:focusable="false"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/channel_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clipToPadding="false"
            android:padding="@dimen/px20"
            android:focusable="true"
            android:descendantFocusability="afterDescendants"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/show_playing_info_view"
        android:layout_width="@dimen/px1000"
        android:layout_height="@dimen/px240"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/px120"
        android:background="@drawable/bg_eit"
        >

        <TextView
            android:id="@+id/channel_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px100"
            android:layout_marginTop="@dimen/px15"
            android:text="1"
            android:textColor="#fff"
            android:textSize="48sp"
            />

        <zx.com.zxvboxtvlive.view.widget.MarqueeTextView
            android:id="@+id/channel_name"
            android:layout_width="@dimen/px180"
            android:layout_height="wrap_content"
            android:layout_below="@+id/channel_id"
            android:layout_marginTop="@dimen/px20"
            android:layout_marginLeft="@dimen/px20"
            android:layout_marginRight="@dimen/px20"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="dddddddddddddddddddddd"
            android:textColor="#fff"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/show_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px100"
            android:layout_marginTop="@dimen/px20"
            android:layout_marginRight="@dimen/px50"
            android:layout_toRightOf="@+id/channel_id"
            android:text="@string/hava_no_show_info"
            android:textColor="#fff"
            android:textSize="18sp"
            />

        <ProgressBar
            android:id="@+id/show_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px5"
            android:layout_alignLeft="@+id/show_playing"
            android:layout_alignRight="@+id/show_playing"
            android:layout_toRightOf="@+id/channel_id"
            android:layout_below="@+id/show_playing"
            style="@style/ShowPlayingProgressStyle"
            android:max="100"
            android:progress="50"
            />

        <TextView
            android:id="@+id/show_will_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/show_playing"
            android:layout_alignRight="@+id/show_playing"
            android:layout_below="@+id/show_progress"
            android:layout_marginTop="@dimen/px5"
            android:layout_toRightOf="@+id/channel_id"
            android:text="@string/hava_no_show_info"
            android:textColor="#fff"
            android:textSize="18sp"
            />

    </RelativeLayout>



</FrameLayout>
